[package]
name = "azure_core_sdk"
description = "Core library for the unofficial Azure SDK for Rust"
version = "0.1.1"

readme         = "README.md"
authors        = ["Francesco Cogno <francesco.cogno@outlook.com>"]
license        = "MIT"
repository     = "https://github.com/MindFlavor/azure_core_sdk"
documentation  = "https://docs.rs/azure_core_sdk"
homepage       = "https://github.com/MindFlavor/azure_core_sdk"

keywords       = ["sdk", "azure", "rest", "iot", "cloud"]
categories     = ["api-bindings"]

[dependencies]
RustyXML     = "0.1.1"
base64       = "0.9.0"
chrono       = "0.4.0"
env_logger   = "0.5.3"
futures      = "0.1.18"
hyper        = "0.11.18"
hyper-tls    = "0.1.2"
log          = "0.4.1"
mime         = "0.3.5"
native-tls   = "0.1.5"
quick-error  = "1.2.1"
rust-crypto  = "0.2.36"
serde        = "1.0.27"
serde_derive = "1.0.27"
serde_json   = "1.0.9"
url          = "1.6.0"
uuid         = "0.6.0"

